Added Scripture and resolved Max GPU issue.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,4 +18,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/GIGWorlds")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="GIGWorldsGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="GIGWorldsCharacter")
+bSmoothFrameRate=True
 
