--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,81 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=7DE866504D0513CCCC10609313C5B782
 ProjectName=Third Person Game Template
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+Build=IfProjectHasCode
+BuildConfiguration=PPBC_Development
+BuildTarget=
+StagingDirectory=(Path="C:/Projects/_Packages/GIGWorlds")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+UsePakFile=True
+bUseIoStore=False
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bForceOneChunkPerFile=False
+MaxChunkSize=0
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+PakFileCompressionFormats=
+PakFileAdditionalCompressionOptions=
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=True
+bDeterministicShaderCodeOrder=False
+bSharedMaterialNativeLibraries=True
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=False
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+LocalizationTargetCatchAllChunkId=0
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
+bSkipEditorContent=False
+bSkipMovies=False
+-IniKeyBlacklist=KeyStorePassword
+-IniKeyBlacklist=KeyPassword
+-IniKeyBlacklist=rsa.privateexp
+-IniKeyBlacklist=rsa.modulus
+-IniKeyBlacklist=rsa.publicexp
+-IniKeyBlacklist=aes.key
+-IniKeyBlacklist=SigningPublicExponent
+-IniKeyBlacklist=SigningModulus
+-IniKeyBlacklist=SigningPrivateExponent
+-IniKeyBlacklist=EncryptionKey
+-IniKeyBlacklist=IniKeyBlacklist
+-IniKeyBlacklist=IniSectionBlacklist
++IniKeyBlacklist=KeyStorePassword
++IniKeyBlacklist=KeyPassword
++IniKeyBlacklist=rsa.privateexp
++IniKeyBlacklist=rsa.modulus
++IniKeyBlacklist=rsa.publicexp
++IniKeyBlacklist=aes.key
++IniKeyBlacklist=SigningPublicExponent
++IniKeyBlacklist=SigningModulus
++IniKeyBlacklist=SigningPrivateExponent
++IniKeyBlacklist=EncryptionKey
++IniKeyBlacklist=IniKeyBlacklist
++IniKeyBlacklist=IniSectionBlacklist
++MapsToCook=(FilePath="/Game/ThirdPersonCPP/Maps/ServerMap")
++MapsToCook=(FilePath="/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap")
+
+[/Script/Engine.AssetManagerSettings]
+-PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass=/Script/Engine.World,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game/Maps")))
+-PrimaryAssetTypesToScan=(PrimaryAssetType="PrimaryAssetLabel",AssetBaseClass=/Script/Engine.PrimaryAssetLabel,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game")))
++PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass=/Script/Engine.World,bHasBlueprintClasses=True,bIsEditorOnly=True,Directories=((Path="/Game/Maps")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
++PrimaryAssetTypesToScan=(PrimaryAssetType="PrimaryAssetLabel",AssetBaseClass=/Script/Engine.PrimaryAssetLabel,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
+bOnlyCookProductionAssets=False
+bShouldManagerDetermineTypeAndName=False
+bShouldGuessTypeAndNameInEditor=True
+bShouldAcquireMissingChunksOnLoad=False
+MetaDataTagsForAssetRegistry=()
+
