Local building is again.
Appears the C++ Game mode base got corrupted and the editor would no longer load the default maps.
I rebuilt new maps and character, and this build is able to be iterated with again.
Make sure to close and re-open the build before checking in just to make sure another editor blocking issue is not introduced.
Clock is not working correctly.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,10 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-GlobalDefaultGameMode="/Script/GIGWorlds.GIGWorldsGameMode"
-ServerDefaultMap=/Game/ThirdPersonCPP/Maps/ServerMap.ServerMap
+GameDefaultMap=/Game/Lobby/Map_Lobby.Map_Lobby
+EditorStartupMap=/Game/Lobby/Map_Lobby.Map_Lobby
+GlobalDefaultGameMode=/Game/Lobby/BP_Lobby.BP_Lobby_C
+ServerDefaultMap=/Game/Games/Tag/MAP_Tag.MAP_Tag
+TransitionMap=/Game/Lobby/MAP_Transition.MAP_Transition
+bUseSplitscreen=False
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
