--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,8 +5,8 @@ ProjectName=Third Person Game Template
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-BuildTarget=
-StagingDirectory=(Path="C:/Projects/_Packages/GIGWorlds")
+BuildTarget=GIGWorldsServer
+StagingDirectory=(Path="C:/Projects/_Packages/GIGServerV1.6")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -39,7 +39,7 @@ LocalizationTargetCatchAllChunkId=0
 bCookAll=False
 bCookMapsOnly=False
 bCompressed=False
-bSkipEditorContent=False
+bSkipEditorContent=True
 bSkipMovies=False
 -IniKeyBlacklist=KeyStorePassword
 -IniKeyBlacklist=KeyPassword
@@ -65,8 +65,8 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="/Game/ThirdPersonCPP/Maps/ServerMap")
-+MapsToCook=(FilePath="/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap")
++MapsToCook=(FilePath="/Game/Lobby/Map_Lobby")
++MapsToCook=(FilePath="/Game/Games/Tag/MAP_Tag")
 
 [/Script/Engine.AssetManagerSettings]
 -PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass=/Script/Engine.World,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game/Maps")))
