--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -22,3 +22,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="GIGWorldsCharacter")
 bSmoothFrameRate=True
 
+[Voice]
+bEnabled=true
