Implemented Voice Chat on Tag Map
Cross-Platform Voice Chat Pro Plugin fully functional on the Tag map with attenuation.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,3 +24,10 @@ bSmoothFrameRate=True
 
 [Voice]
 bEnabled=true
+
+[/Script/Engine.Player] 
+ConfiguredInternetSpeed=500000
+ConfiguredLanSpeed=500000
+[/Script/OnlineSubsystemUtils.IpNetDriver]
+MaxClientRate=100000
+MaxInternetClientRate=100000
