--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,12 +1,20 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=7DE866504D0513CCCC10609313C5B782
 ProjectName=Third Person Game Template
+CompanyName=Every Good Work
+CompanyDistinguishedName=Every Good Work, Inc.
+Homepage=www.godly.games
+SupportContact=peter@everygoodwork.online
+LicensingTerms=Free to play
+PrivacyPolicy=Public
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "A72F4CFE4842E5AE8496C28AAD60DBC3", "GIGWorlds")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "00F8D21A4CE283A505C23D810A42C1EC", "GIGWorlds V1")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=GIGWorldsServer
-StagingDirectory=(Path="C:/Projects/_Packages/GIGServerV1.6")
+StagingDirectory=(Path="C:/Projects/_Packages/GIGServerV1.7")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -67,6 +75,7 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Lobby/Map_Lobby")
 +MapsToCook=(FilePath="/Game/Games/Tag/MAP_Tag")
++DirectoriesToAlwaysCook=(Path="/Game/Effects/Audio")
 
 [/Script/Engine.AssetManagerSettings]
 -PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass=/Script/Engine.World,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game/Maps")))
@@ -78,4 +87,9 @@ bShouldManagerDetermineTypeAndName=False
 bShouldGuessTypeAndNameInEditor=True
 bShouldAcquireMissingChunksOnLoad=False
 MetaDataTagsForAssetRegistry=()
+
+[/Script/Engine.GameNetworkManager]
+TotalNetBandwidth=4000000
+MaxDynamicBandwidth=100000
+MinDynamicBandwidth=40000
 
