--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -31,3 +31,8 @@ ConfiguredLanSpeed=500000
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 MaxClientRate=100000
 MaxInternetClientRate=100000
+
+[/Script/LuminRuntimeSettings.LuminRuntimeSettings]
+IconModelPath=(Path="")
+IconPortalPath=(Path="")
+
