--- a/GIGWorlds.uproject
+++ b/GIGWorlds.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "GIGWorlds",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
