Updated version and set to connect to ServerA

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,6 +9,9 @@ LicensingTerms=Free to play
 PrivacyPolicy=Public
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "A72F4CFE4842E5AE8496C28AAD60DBC3", "GIGWorlds")
 ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "00F8D21A4CE283A505C23D810A42C1EC", "GIGWorlds V1")
+ProjectVersion=1.0.0.1
+Description=GIGWorlds Beta Build
+CopyrightNotice=Free to play and use
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
