#13 Invert the Mouse
Incorporated the Complete Menu System (https://www.unrealengine.com/marketplace/en-US/product/complete-menu-system)  into the project.  Documentation check in with source code.  Important to note, running a in editor debug build in the selected viewport with multiple clients created, causes a duplicated controller and menu error.  This can be avoided by running in standalone mode.  Note this is an in-progress checkin and further customization is ongoing.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,11 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Lobby/Map_Lobby.Map_Lobby
-EditorStartupMap=/Game/Lobby/Map_Lobby.Map_Lobby
-GlobalDefaultGameMode=/Game/Lobby/BP_Lobby.BP_Lobby_C
+GameDefaultMap=/Game/AntizeMenuSystem/Map/MainMenuMap.MainMenuMap
+EditorStartupMap=/Game/AntizeMenuSystem/Map/MainMenuMap.MainMenuMap
+GlobalDefaultGameMode=/Game/AntizeMenuSystem/Blueprints/BP_MyGameMode.BP_MyGameMode_C
 ServerDefaultMap=/Game/Games/Tag/MAP_Tag.MAP_Tag
-TransitionMap=/Game/Lobby/MAP_Transition.MAP_Transition
+TransitionMap=/Game/Games/Tag/MAP_Tag.MAP_Tag
 bUseSplitscreen=False
+GameInstanceClass=/Game/AntizeMenuSystem/Blueprints/BP_MyGameInstance.BP_MyGameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
@@ -38,3 +39,7 @@ IconPortalPath=(Path="")
 
 [Audio]
 UnfocusedVolumeMultiplier=1.0
+
+[/Script/Engine.UserInterfaceSettings]
+bLoadWidgetsOnDedicatedServer=False
+
