--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=7DE866504D0513CCCC10609313C5B782
-ProjectName=Third Person Game Template
+ProjectName=GGTag
 CompanyName=Every Good Work
 CompanyDistinguishedName=Every Good Work, Inc.
 Homepage=www.godly.games
@@ -9,8 +9,8 @@ LicensingTerms=Free to play
 PrivacyPolicy=Public
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "A72F4CFE4842E5AE8496C28AAD60DBC3", "GIGWorlds")
 ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "00F8D21A4CE283A505C23D810A42C1EC", "GIGWorlds V1")
-ProjectVersion=1.0.0.1
-Description=GIGWorlds Beta Build
+ProjectVersion=1.8.2.2
+Description=Godly.Games Tag
 CopyrightNotice=Free to play and use
 
 [/Script/UnrealEd.ProjectPackagingSettings]
