Loading screen and menu updated
Working build connecting to Dev ServerA

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,7 +7,7 @@ Homepage=www.godly.games
 SupportContact=peter@everygoodwork.online
 LicensingTerms=Free to play
 PrivacyPolicy=Public
-ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "A72F4CFE4842E5AE8496C28AAD60DBC3", "GIGWorlds")
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "A72F4CFE4842E5AE8496C28AAD60DBC3", "Godly Games Tag")
 ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "00F8D21A4CE283A505C23D810A42C1EC", "GIGWorlds V1")
 ProjectVersion=1.8.2.2
 Description=Godly.Games Tag
