Adjusted the Framerate
Removed the hard limit on frame rate now that people can adjust that through the menu.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,6 +9,7 @@ GameInstanceClass=/Game/AntizeMenuSystem/Blueprints/BP_MyGameInstance.BP_MyGameI
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
+FrameRateLock=PUFRL_None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -36,6 +37,7 @@ MaxInternetClientRate=100000
 [/Script/LuminRuntimeSettings.LuminRuntimeSettings]
 IconModelPath=(Path="")
 IconPortalPath=(Path="")
+FrameTimingHint=Unspecified
 
 [Audio]
 UnfocusedVolumeMultiplier=1.0
