--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,7 +8,7 @@ SupportContact=peter@everygoodwork.online
 LicensingTerms=Free to play
 PrivacyPolicy=Public
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "A72F4CFE4842E5AE8496C28AAD60DBC3", "Godly Games Tag")
-ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "00F8D21A4CE283A505C23D810A42C1EC", "GIGWorlds V1")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "00F8D21A4CE283A505C23D810A42C1EC", "GGTag V1")
 ProjectVersion=1.8.2.2
 Description=Godly.Games Tag
 CopyrightNotice=Free to play and use
