Fixed Map Barriers and Frame rate
Set invisible barriers so they did not block Third Person Character camera, and set fixed max framerate at 60.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -23,6 +23,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="GIGWorldsGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="GIGWorldsCharacter")
 bSmoothFrameRate=True
+bUseFixedFrameRate=True
+FixedFrameRate=60.000000
 
 [Voice]
 bEnabled=true
@@ -44,4 +46,7 @@ UnfocusedVolumeMultiplier=1.0
 
 [/Script/Engine.UserInterfaceSettings]
 bLoadWidgetsOnDedicatedServer=True
+
+[/Script/Engine.PhysicsSettings]
+DefaultTerminalVelocity=10000.000000
 
