Updated Build Version

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,8 +9,8 @@ LicensingTerms=Free to play
 PrivacyPolicy=Public
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "A72F4CFE4842E5AE8496C28AAD60DBC3", "Godly Games Tag")
 ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "00F8D21A4CE283A505C23D810A42C1EC", "GGTag V1")
-ProjectVersion=1.8.2.2
-Description=Godly.Games Tag
+ProjectVersion=1.8.2.3
+Description=Godly.Games
 CopyrightNotice=Free to play and use
 
 [/Script/UnrealEd.ProjectPackagingSettings]
