--- a/GIGWorlds.uproject
+++ b/GIGWorlds.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.26",
+	"EngineAssociation": "{8B72003D-4D73-55FA-BE6E-AF9723BE5DEB}",
 	"Category": "",
 	"Description": "DESCRIPTION",
 	"Modules": [
@@ -21,6 +21,14 @@
 		},
 		{
 			"Name": "NiagaraExtras",
+			"Enabled": true
+		},
+		{
+			"Name": "ControlRig",
+			"Enabled": true
+		},
+		{
+			"Name": "FullBodyIK",
 			"Enabled": true
 		}
 	]
