--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameDefaultMap=/Game/AntizeMenuSystem/Map/MainMenuMap.MainMenuMap
 EditorStartupMap=/Game/AntizeMenuSystem/Map/MainMenuMap.MainMenuMap
 GlobalDefaultGameMode=/Game/AntizeMenuSystem/Blueprints/BP_MyGameMode.BP_MyGameMode_C
-ServerDefaultMap=/Game/Games/Tag/MAP_Tag.MAP_Tag
-TransitionMap=/Game/Games/Tag/MAP_Tag.MAP_Tag
+ServerDefaultMap=/Game/SciFiModularOutpost/Maps/ShowCase.ShowCase
+TransitionMap=/Game/SciFiModularOutpost/Maps/ShowCase.ShowCase
 bUseSplitscreen=False
 GameInstanceClass=/Game/AntizeMenuSystem/Blueprints/BP_MyGameInstance.BP_MyGameInstance_C
 
