Updated files to Unreal Engine version 4.26.2

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameDefaultMap=/Game/AntizeMenuSystem/Map/MainMenuMap.MainMenuMap
 EditorStartupMap=/Game/AntizeMenuSystem/Map/MainMenuMap.MainMenuMap
 GlobalDefaultGameMode=/Game/AntizeMenuSystem/Blueprints/BP_MyGameMode.BP_MyGameMode_C
-ServerDefaultMap=/Game/Games/Tag/ShowCase.ShowCase
+ServerDefaultMap=/Game/Games/Tag/OutpostTag_MAP.OutpostTag_MAP
 TransitionMap=/Game/Games/Tag/ShowCase.ShowCase
 bUseSplitscreen=False
 GameInstanceClass=/Game/AntizeMenuSystem/Blueprints/BP_MyGameInstance.BP_MyGameInstance_C
