Fixed issue with feet caused by removing PowerIK.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=7DE866504D0513CCCC10609313C5B782
-ProjectName=GGTag
+ProjectName=GG Tag
 CompanyName=Every Good Work
 CompanyDistinguishedName=Every Good Work, Inc.
 Homepage=www.godly.games
@@ -9,15 +9,15 @@ LicensingTerms=Free to play
 PrivacyPolicy=Public
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "A72F4CFE4842E5AE8496C28AAD60DBC3", "Godly Games Tag")
 ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "00F8D21A4CE283A505C23D810A42C1EC", "GGTag V1")
-ProjectVersion=1.8.2.3
+ProjectVersion=1.8.3.4
 Description=Godly.Games
 CopyrightNotice=Free to play and use
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
-BuildTarget=GIGWorldsServer
-StagingDirectory=(Path="C:/Projects/_Packages/GIGServerV1.7")
+BuildConfiguration=PPBC_Shipping
+BuildTarget=GGTag
+StagingDirectory=(Path="C:/Projects/GIGWorlds/Build")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -76,8 +76,9 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="/Game/Lobby/Map_Lobby")
-+MapsToCook=(FilePath="/Game/Games/Tag/MAP_Tag")
++MapsToCook=(FilePath="/Game/AntizeMenuSystem/Map/MainMenuMap")
++MapsToCook=(FilePath="/Game/Games/Tag/OutpostTag_MAP")
++MapsToCook=(FilePath="/Game/Games/Tag/OutpostTagDayLight_MAP")
 +DirectoriesToAlwaysCook=(Path="/Game/Effects/Audio")
 
 [/Script/Engine.AssetManagerSettings]
