--- a/GIGWorlds.uproject
+++ b/GIGWorlds.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.26",
+	"EngineAssociation": "{8B72003D-4D73-55FA-BE6E-AF9723BE5DEB}",
 	"Category": "",
 	"Description": "DESCRIPTION",
 	"Modules": [
@@ -33,7 +33,7 @@
 		},
 		{
 			"Name": "PowerIK",
-			"Enabled": true,
+			"Enabled": false,
 			"MarketplaceURL": "https://www.unrealengine.com/marketplace/en-US/product/power-ik"
 		},
 		{
