--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -50,7 +50,7 @@ LocalizationTargetCatchAllChunkId=0
 bCookAll=False
 bCookMapsOnly=False
 bCompressed=False
-bSkipEditorContent=True
+bSkipEditorContent=False
 bSkipMovies=False
 -IniKeyBlacklist=KeyStorePassword
 -IniKeyBlacklist=KeyPassword
