--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=7DE866504D0513CCCC10609313C5B782
 ProjectName=GG Tag
-CompanyName=Every Good Work
+CompanyName=Every Good Work, Inc.
 CompanyDistinguishedName=Every Good Work, Inc.
 Homepage=www.godly.games
 SupportContact=peter@everygoodwork.online
